--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,17 +11,18 @@
     font-family:Nunuto_Sans_itelic;
 }
 body {
+    min-width: 1300px;
     margin: 0;
-    font-family:Nunuto_Sans ;
-    min-width: 1260px;
+    font-family:Nunuto_Sans;
 }
 
-.header_content {       
+.header_content {   
+    padding-left: 92px;
+    padding-right: 90px;   
     height: 83px;
     display: flex;
-    justify-content: space-between;
+    justify-content:space-between;
     align-items: center;
-    padding: 24px 90px 22px 92px;
     text-transform: uppercase;
 }
 .container{
@@ -30,6 +31,7 @@ body {
     box-sizing: border-box;
 }
 header {
+    margin: 0;
     background-color: #131313;
 } 
 .logo {
@@ -56,7 +58,11 @@ header {
 .nav_a_active {
     color: #e3b873;
 }
+.tel_button {
+    display: flex;
+}
 #tel {
+    width: 126px;
     color: #e3b873;
     font-size: 11px;
     line-height: 15px;
@@ -70,8 +76,6 @@ header {
     box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.2);
     border-radius: 2px;
     color: white;
-    width: 161px;
-    height: 37px;
     font-style: italic;
     font-size: 11px;
     line-height: 15px;
@@ -160,7 +164,7 @@ h2 {
     color: white;
 }
 .block_3 {
-    height:1466px;
+    height:1893.8px;
     background: color #e5e5e5;
     
 }
@@ -318,39 +322,40 @@ a.active {
     align-items: flex-end;
 
 }
+.form_input.input_3::placeholder{
+    color: #363636;
+}
 .input{
     display: flex;
     flex-direction: column;
-    border: none;
-    border-bottom: 1px solid rgba(54, 54, 54, 0.3);;
 }
 input {
     border: none;
     font-size: 14px;
     line-height: 22.92px;
-    color: #363636;
-    width: 231px;
+}
+input:focus{
+    outline: 0;
 }
 .input_1 {
     margin-right: 58px;
+    width: 231px;
+    border: none;
+    border-bottom: 1px solid rgba(54, 54, 54, 0.3);;
     
 }
 .input_2 {
     margin-right: 49px;
+    width: 231px;
+    border: none;
+    border-bottom: 1px solid rgba(54, 54, 54, 0.3);;
 }
 label {
     font-size: 13px;
     line-height: 21.28px;
-    color:rgba(54, 54, 54, 0.5); ;
-
+    color:rgba(54, 54, 54, 0.5);
 }
- .submit {
-     width: 200px;
-     height:51px ;
- }
- .checkbox {
- width: 27px;
- }
+
  .repair {
     display: flex;
     flex-direction: column;
@@ -363,6 +368,8 @@ label {
      color: #181818;
  }
  .button_3 {
+    width: 200px;
+    height:51px ;
      font-size: 13px;
      line-height: 26.6px;
  }
@@ -377,6 +384,7 @@ label {
      margin-top: 16px;
      display: grid;
      grid-template-columns: 1fr 1fr 1fr;
+     margin-bottom: 44px;
 
  }
  .desing_img img {
@@ -433,4 +441,497 @@ label {
     z-index: 2;
 
  }
+ .block_4 {
+    /* height:678.44px; */
+    background: color #e5e5e5;
+    margin-top: 171px;
+ }
+ .specialist {
+     display: flex;
+     justify-content: space-between;
+ }
+ .input_3 {
+     margin-top:48px ;
+    width: 408px;
+    height: 48px;
+    border: none;
+    border-bottom: 1px solid rgba(54, 54, 54, 0.3);; 
+    color: #363636;
+}
+.input_3>input {
+    padding: 0;
+    color:white;
+    height: 33px;
+    background-color: #131313;
+}
+.input_3>input::placeholder{
+    color:white;
+}
+.input_3>label {
+    height: 16px;
+    color: rgba(255, 255, 255, 0.5);
+}
+.request_measurer{
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    padding: 28px 49px;
+    width: 506px;
+    height: 509px;
+    background-color: #131313;
+    color: white;
+    margin-bottom: 38.44px;
+}
+.request_measurer>form {
+    display: flex;
+    flex-direction: column;
+}
+.check_box_measurer {
+    margin-top: 19px;
+margin-left: -34px;
+}
+.button_4 {
+    margin-top: 39px;
+    width: 213px;
+    height:51px ;
+     font-size: 13px;
+     line-height: 21.28px;
+     align-self: flex-end;
+ }
  
+.request_measurer>h3 {
+    height: 47px;
+    margin-top: 0;
+    font-weight: 100;
+    font-size: 18px;
+    line-height: 25.78px;
+    text-align: center;
+    margin-bottom: -18px;
+}
+.chb_2+label{
+    height: 16px;
+    color:white;
+}
+.checkbox {
+    opacity: 0;
+width: 27px;
+}
+.checkbox+label {
+   display: inline-flex;
+   align-items: center;
+   user-select: none;
+   
+}
+.checkbox+label::before {
+   margin-right:8.62px;
+   content: '';
+   display: inline-block;
+   width: 16px;
+   height: 16px;
+   flex-shrink: 0;
+   flex-grow: 0;
+   border-radius: 2px;
+   background-repeat: no-repeat;
+   background-position: center center;
+   background-size: 50% 50%;
+ }
+ .chb_1+label::before{
+    border: 1px solid #131313;
+ }
+ .chb_2+label::before{
+    border: 1px solid #e5e5e5;
+    background-color: #e5e5e5;
+ }
+ .checkbox:checked+label::before{
+   background-color: #e3b873;
+   color: white;
+   border:1px solid #E3B873;
+   background-image: url('../image/gal.png');
+ }
+ .sale {
+     height: 72px;
+     vertical-align: middle;
+     padding-left: 32.5px;
+ }
+ 
+ .sale>p{
+     font-size: 18px;
+     line-height: 25.78px;
+     color:#e3b873;
+     text-shadow: 0px 3px 10px rgba(227, 184, 115, 0.15);
+     margin: 0;
+ }
+ .sale>p::before {
+     margin-top: -10px;
+     margin-right: 25px;
+    content: '';
+   display: inline-block;
+   width: 72px;
+   height: 72px;
+   flex-shrink: 0;
+   flex-grow: 0;
+   border-radius: 50%;
+   background-color: #e3b873;
+   background-repeat: no-repeat;
+   background-position: center center;
+   background-size: 50% 50%;
+   float: left;
+   background-image: url('../image/pig-image.svg');
+ }
+ .ol_specialist{
+     padding-left: 341px;
+     list-style: none;
+     margin: 0;
+     margin-top: 130px;
+     padding-top: 21px;
+ }
+
+ .ol_specialist>li{
+     font-size:14px;
+     line-height: 19px;
+     color: #363636;
+     height: 38px;
+ }
+ .ol_specialist>li::before{
+    box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.15);
+    border-radius: 30px;
+    content: attr(data-list);
+    font-family:YesevaOne;
+    font-size: 18px;
+    line-height: 25px;
+    text-align: center;
+    color: white;
+    margin-right: 9.05px;
+    margin-top: -10px;
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    padding: 8.38px;
+    flex-shrink: 0;
+    flex-grow: 0;
+    border-radius: 50%;
+    border: 8px solid #FFFFFF;;
+    background-color: #e3b873;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 50% 50%;
+    float: left;
+ }
+ .ol_specialist>.one_string::before{
+    margin-top: -20px;
+ }
+ .two_string{
+     margin-top: -10px;
+     margin-bottom: 114px;
+ }
+ .one_string{
+    margin-bottom: 106px;
+}
+ .ol_wrapper{
+     height: fit-content;
+     margin-top: -130px;
+     width: 803px;
+    background-image: url('../image/image 6.1.png');
+    background-position: center;
+    background-repeat: no-repeat;
+ }
+ .block_5 {
+     min-width: 1440px;
+     margin-top: 242.1px;
+     margin-bottom: 111px;
+     position: relative;
+     height: 864px;
+    background-image:url('../image/BG-I_5.png');
+    background-size: 100% auto;
+    background-position: center;
+    background-repeat:no-repeat;
+ }
+
+    
+.fantasies{
+    display: flex;
+    position: relative;
+    z-index: 1;
+}    
+.gallery {
+    display: flex;
+    flex-direction: column;
+}
+.gallery_1 {
+    margin-top: -60px;
+}
+.gallery_2 {
+    margin-top: -131.5px;
+}
+.style_list>h2 {
+    text-align: left;
+    width:411px;
+    margin: 137.47px 56px 47px 99px;
+    margin-left: 99px;
+    font-weight: 100;
+    font-size: 27px;
+    line-height: 37px;
+color: #E3B873;
+}
+.style_list>ul {
+    margin-left: 60px;
+    list-style:none;
+    font-size: 20px;
+    line-height: 38px;
+    color: #FFFFFF;
+}
+.style_list>ul>li {
+    height: 24px;
+    font-size: 20px;
+    line-height: 38px;
+    color: #FFFFFF;
+    margin-bottom: 25px;
+}
+.styles {
+    text-decoration: none;
+    font-size: 20px;
+    line-height: 38px;
+    color: #FFFFFF;
+
+}
+.gallery>img {
+    margin: 19px 21px;
+}
+
+ .block_6 {
+    background-image: url('../image/background-image.png');
+    background-position:bottom;
+    background-repeat:repeat-x;
+ }
+.clients {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 354px;
+}
+.clients>h2 {
+    color: #181818;
+    font-size: 20px;
+    line-height: 28px;
+    margin-bottom: 13.4px;
+}
+.clients>p {
+    font-size: 18px;
+    line-height: 29px;
+    text-align: center;
+    color: #363636;
+}
+.hand {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.client_foto {
+    width: 76px;
+    height: 76px;
+    border-radius: 50%;
+}
+.example_clients{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin-left: 103px;
+    padding-right: 47px;
+
+}
+.client {
+    margin-top: 24px;
+    margin-left: 20px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+.client_wrapepr{
+    background: #FFFFFF;
+    box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.04);
+    margin-right: 54px;
+    width: 376px;
+}
+.client>h3 {
+    text-transform: capitalize;
+    font-weight: 100;
+    font-size: 18px;
+    line-height: 23px;
+    color: #181818;
+    margin-left: 23px;
+}
+.client+p{
+    font-size: 13px;
+    line-height: 180%;
+    color: #959595;
+    margin-left: 20px;
+    margin-right: 31.92px;
+}
+.block_7 {
+    position: relative;
+    height: 954px;
+    background-image: url('../image/back-im.png');
+    background-size: 100% auto;
+    background-position: center;
+    background-repeat:no-repeat;
+}
+.card {
+    position: relative;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.questions {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 445.32px;
+    width: 883px;
+    background: #131313;
+    margin-top: -222.66px;
+}
+
+.input_questions>input {
+   padding: 0;
+   color:white;
+   height: 33px;
+   background-color: #131313;
+}
+.input_questions>input::placeholder{
+   color:white;
+}
+.input_questions>label {
+   height: 16px;
+   color: rgba(255, 255, 255, 0.5);
+}
+.input_4 {
+    width: 231px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.15);
+}
+.input_5 {
+    width: 516.82px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.15);
+    margin-bottom: 46.46px;
+}
+.questions_1_2 {
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;
+    width: 516.82px;
+    margin-bottom: 48.76px;
+}
+.questions>h3 {
+    font-weight: 100;
+    font-size: 20px;
+    line-height: 28px;
+    color: #FFFFFF;
+    text-transform: uppercase;
+    margin-bottom: 45.8px;
+}
+.button_questions {
+    width: 200px;
+    height: 51px;
+    box-shadow: 0px 5px 20px rgba(227, 184, 115, 0.1);
+    margin-top: 50.45px;
+    font-size: 13px;
+    line-height: 27px;
+}
+.card>h2 {
+    text-align: center;
+    font-size: 20px;
+    line-height: 28px;
+    color: #E3B873;
+    margin-top: 52.01px;
+}
+.card>ul {
+    display: flex;
+    flex-direction: row;
+    list-style:none;
+    margin-top: 26px;
+    padding: 0;
+}
+.card>ul>li {
+    width: 14px;
+    height: 14px;
+    margin-right: 29px;
+}
+.icon_img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 7px;
+    height: 100%;
+    width: 100%;
+    background: #E3B873;
+    border-radius: 50%;
+}
+.map {
+    width: 925px;
+    height: 465px;
+    background-image: url('../image/map-image.png');
+    margin-top: 43.29px;
+}
+footer {
+    background: #181818;
+}
+.footer_content { 
+    padding-left: 92px;
+    padding-right: 90px; 
+    height:133px ;    
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    text-transform: uppercase;
+}
+@media screen and (max-width: 1440px){
+    .block_5 {
+        position: relative;
+        height: 864px;
+       background-image:url('../image/BG-I_5.png');
+       background-size: auto 100%;
+       background-position: center;
+       background-repeat:no-repeat;
+    }
+    .block_7 {
+        position: relative;
+        height: 954px;
+        background-image: url('../image/back-im.png');
+        background-size: auto 100%;
+        background-position: center;
+        background-repeat:no-repeat;
+    }
+}
+.project_description {
+    display: flex;
+    height: 54px;
+    width: 293.75px;
+    background: #E3B873;
+    box-shadow: 5px 5px 20px rgba(227, 184, 115, 0.5);
+    margin-bottom: -27px;
+}
+.size{
+    box-sizing: border-box;
+    display: flex;
+    font-size: 17px;
+    line-height: 24px;
+    color: #FFFFFF;
+    align-items: center;
+    border-right: 0.75px solid #FFFFFF;
+    width: 135.09px;
+    padding-left: 17.36px;
+    text-transform: uppercase;
+}
+.time{
+    display: flex;
+    font-size: 17px;
+    line-height: 24px;
+    color: #FFFFFF;
+    align-items: center;
+    text-transform: uppercase;
+    padding-left: 17.36px;
+}
+.img_description {
+    margin-right: 15px;
+}
